<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@android:color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <!-- Back Button -->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp">

            <ImageButton
                android:id="@+id/buttonBack"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_alignParentStart="true"
                android:background="@drawable/bg_edit_profile_image"
                android:src="@drawable/ic_chevron_left" />

        </RelativeLayout>

        <!-- Profile Picture -->
        <ImageView
            android:id="@+id/profileImageView"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/ic_default_profile"
            android:scaleType="centerCrop"
            android:layout_marginTop="24dp"
            android:background="@drawable/bg_edit_profile_image"
            android:padding="4dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit_profile"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:fontFamily="@font/agency_fb"
            android:layout_marginTop="16dp" />

        <!-- Full Name -->
        <EditText
            android:id="@+id/editTextName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:layout_marginTop="24dp"
            android:padding="12dp"
            android:fontFamily="@font/agency_fb_reg"
            android:textColor="@color/black"
            android:background="@drawable/bg_input_box_border" />

        <!-- Email -->
        <EditText
            android:id="@+id/editTextEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:layout_marginTop="16dp"
            android:padding="12dp"
            android:fontFamily="@font/agency_fb_reg"
            android:textColor="@color/semi_grey"
            android:background="@drawable/bg_input_box_border"
            android:enabled="false"
            />

        <!-- Phone -->
        <EditText
            android:id="@+id/editTextPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phone"
            android:inputType="phone"
            android:layout_marginTop="16dp"
            android:padding="12dp"
            android:fontFamily="@font/agency_fb_reg"
            android:textColor="@color/black"
            android:background="@drawable/bg_input_box_border" />

        <!-- Save Button -->
        <Button
            android:id="@+id/buttonSaveProfile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/agency_fb"
            android:background="@drawable/bg_submit_box"
            android:textColor="@android:color/white" />

    </LinearLayout>
</ScrollView>
